# monkey_do

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  switch.py  test_script.py
backend/: instructions_mongodb.md  mongodb_config.py
core/: __init__.py  config_gsheet.py  paths.py
instructions/: instructions.md  pydantic-ai.md  terminal_instructions.md
old/: quality_control_gsheet_csv_old.py
scripts/: __init__.py  sheets_demo.py  test_patient_data.py
utils/: __init.py
utils/data_tools/: __init__.py  gsheet.py  patient_data.py
utils/data_tools/patient_data/: __init__.py  cli.py  filters.py  models.py  processor.py  utils.py
workflows/: quality_control_gsheet_csv.py
workflows/quality_control/: __init__.py  main.py  report_generator.py
workflows/quality_control/analyzers/: __init__.py  admission_analyzer.py  base.py  birth_analyzer.py  discharge_analyzer.py  file_analyzer.py  id_analyzer.py  other_analyzers.py
workflows/quality_control/reporters/: __init__.py  console_reporter.py
workflows/quality_control/utils/: __init__.py  helpers.py
